Fixed text-align

--- a/src/CartItems.scss
+++ b/src/CartItems.scss
@@ -5,7 +5,7 @@
   align-content: center;
   h2 {
     width: 350px;
-    text-align: left;
+    text-align: center;
   }
   i {
     position: relative;
